add composite network modification (#89)
Signed-off-by: REHILI Ghazwa <ghazwarhili@gmail.com>